manifests/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: http
      protocol: TCP
  selector:
    app: home-assistant
